kubectl/code-server/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: code-server
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
