kubectl/code-server/service.yml
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: code-server
  labels:
    app: code-server
spec:
  type: ClusterIP
  selector:
    app: code-server
  ports:
    - name: http
      port: 8080
      targetPort: 8080
