kubectl/code-server/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: code-server
  namespace: code-server
  annotations:
    cfzt.cloudflare.com/enabled: "true"
    cfzt.cloudflare.com/tenant: "wheethome"
    cfzt.cloudflare.com/template: "protected-adauth-wheethome"
    cfzt.cloudflare.com/hostname: "vscode.wheethome.com"
spec:
  parentRefs:
    - name: default-gateway
      namespace: gateway-api
      sectionName: websecure
  hostnames:
    - "vscode.wheethome.com"
  rules:
    - backendRefs:
        - name: code-server
          port: 8080
